--- a/src/loader/dune
+++ b/src/loader/dune
@@ -1,4 +1,5 @@
 (library
  (name loader)
+ (public_name odoc.loader)
  (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
  (libraries compiler-libs.common model parser_))
