--- a/src/parser/dune
+++ b/src/parser/dune
@@ -2,5 +2,6 @@
 
 (library
  (name parser_)
+ (public_name odoc.parser_)
  (preprocess (pps bisect_ppx -conditional))
  (libraries model compat astring))
